--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "json-server --watch src/data/db.json --delay 500",
-    "start": "concurrently \"npm run server\" \"npm run dev\""
+    "start": "concurrently \"npm run server\" \"npm run dev\"",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/themes": "^2.0.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/react": "^14.2.0",
     "axios": "^1.6.0",
     "delay": "^6.0.0",
     "json-server": "^0.17.4",
@@ -28,6 +31,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "vitest": "^3.2.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -38,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
